--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 <!-- main-body-part-2 end -->
 
 
-                <!-- main-body-part-3 start -->
+                <!-- main-body-part-3 about us start -->
 
                 <div class="main-body-part-3">
 
@@ -189,7 +189,91 @@
                 </div>
 
 
-                <!-- main-body-part-3 end -->
+                <!-- main-body-part-3 about us end -->
+
+                 <!-- main-body-part-4 start -->
+                
+
+                <div class="main-body-part-4">
+
+                    <div class="main-body-part-4-box">
+                        <div class="main-body-part-4-box-section">
+                            <h1>Eum ipsam laborum deleniti <span class="font-weight-bold">velit pariatur architecto aut nihil</span></h1>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit</p>
+
+                            <div class="q-box">
+                                <div class="q-box-item">
+                                    <h2> <span style="font-weight: bold; color: aqua; font-size: 22px;"> 01 </span> Non consectetur a erat nam at lectus urna duis?</h2>
+                                    <br>
+                                    <p>Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.</p>
+
+                                </div>
+
+                                <div class="q-box-item">
+                                    <h2> <span style="font-weight: bold; color: aqua; font-size: 22px;"> 02 </span> Feugiat scelerisque varius morbi enim nunc?</h2>
+                                    <br>
+                                    <p>Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.</p>
+
+                                </div>
+                                <div class="q-box-item">
+                                    <h2><span style="font-weight: bold; color: aqua  ; font-size: 22px;"> 03 </span> Dolor sit amet consectetur adipiscing elit?</h2>
+                                    <br>
+                                    <p>Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis convallis convallis tellus. Urna molestie at elementum eu facilisis sed odio morbi quis</p>
+
+                                </div>
+                            </div>
+                        </div>
+                        <div class="main-body-part-4-box-section">
+                            <img src="images/hero-img.png" alt="2nd photo">
+                        </div>
+                    </div>
+
+                </div>
+
+                <!-- main-body-part-4 end -->
+
+
+                <!-- main-body-part-5 start -->
+
+
+                <div class="main-body-part-5">
+
+                    <div class="main-body-part-5-box">
+
+                        <div class="part-5-box-section">
+                            <div class="heading">
+                                <h1>SERVICES</h1>
+                            </div>
+                            <div class="details">
+                                <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+                            </div>
+
+                        </div>
+                        <div class="part-5-box-section-2">
+                            <div class="small-logo-describe">
+                                <h2>Lorem Ipsum</h2>
+                                <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+                            </div>
+                            <div class="small-logo-describe">
+                                <h2>Sed ut perspici</h2>
+                                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+                            </div>
+                            <div class="small-logo-describe">
+                                <h2>Magni Dolores</h2>
+                                <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+                            </div>
+                            <div class="small-logo-describe">
+                                <h2>Nemo Enim</h2>
+                                <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+                            </div>
+                        </div>
+                    </div>
+
+
+                </div>
+
+
+                <!-- main-body-part-5 end -->
 
 
         </div>
