--- a/index.html
+++ b/index.html
@@ -276,6 +276,63 @@
                 <!-- main-body-part-5 end -->
 
 
+                <!-- main-body-part-6 start -->
+
+                <div class="main-body-part-6">
+
+                    <div class="call-to-action-title">
+                        <div class="call-to-action-info">
+                            <h2>Call to Action</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, fugiat? amet consectetur adipisicing elit. Quae, fugiat?</p>
+                        </div>
+                        <div class="call-to-action-button">
+                            <button>Call To Action</button>
+                        </div>
+                    </div>     
+                </div>
+                <!-- main-body-part-6 end -->
+
+                <!-- main-body-part-7-start -->
+
+                <div class="main-body-part-7-box">
+
+                    <div class="portfolio-box">
+
+                        <div class="portfolio-item">
+                            <h1>portfolio</h1>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum placeat esse nesciunt delectus laborum veritatis, aliquam, est expedita eos, eveniet quaerat exercitationem labore. Provident inventore nisi magnam cum modi aspernatur?</p>
+                        </div>
+                        <div class="portfolio-item-2">
+                            <ul>
+                                <li><a href="#">All</a></li>
+                                <li><a href="#">App</a></li>
+                                <li><a href="#">Card</a></li>
+                                <li><a href="#">Web</a></li>
+                            </ul>
+                        </div>
+                        <div class="portfolio-item-3">
+                            <div class="portfolio-item-3-part">
+                                <img src="images/portfolio-1.jpg" alt="portfolio">
+                                <img src="images/portfolio-1.jpg" alt="portfolio">
+                                <img src="images/portfolio-1.jpg" alt="portfolio">
+                            </div>
+                            <div class="portfolio-item-3-part">
+                                <img src="images/portfolio-1.jpg" alt="portfolio">
+                                <img src="images/portfolio-1.jpg" alt="portfolio">
+                                <img src="images/portfolio-1.jpg" alt="portfolio">
+                            </div>
+                            <div class="portfolio-item-3-part">
+                                <img src="images/portfolio-1.jpg" alt="portfolio">
+                                <img src="images/portfolio-1.jpg" alt="portfolio">
+                                <img src="images/portfolio-1.jpg" alt="portfolio">
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+                <!-- main-body-part-7 end -->
+
         </div>
 
         <!-- main body end -->
