--- a/index.html
+++ b/index.html
@@ -437,24 +437,89 @@
         </div>
 
 
-        <div class="division">
+        <!-- team-member-section start -->
 
-            <div class="division-item">
-                <img src="images/classic Power tiller.jpg" alt="">
+            <div class="team-section-box">
+
+                <div class="team-section-title">
+                    <h2>team</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis odit voluptate similique dignissimos repellendus facilis quisquam tempora praesentium tempore delectus.</p>
+                </div>
+
+                <div class="team-pic-info">
+
+                    <div class="team-pic-info-matter">
+                            <div class="pic">
+                                <img src="images/team-1.jpg" alt="">
+                            </div>
+                            <div class="info">
+                               <h2>Walter White</h2> 
+                               <p>Chief Executive Officer</p>
+                               <br>
+                               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo, nihil!</p>
+                            </div>
+                        </div>
+                        <div class="team-pic-info-matter">
+                            <div class="pic">
+                                <img src="images/team-2.jpg" alt="">
+                            </div>
+                            <div class="info">
+                               <h2>Amanda Jepson</h2> 
+                               <p>Accountant</p>
+                               <br>
+                               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo, nihil!</p>
+                            </div>
+                        </div>
+                        <div class="team-pic-info-matter">
+                            <div class="pic">
+                                <img src="images/team-3.jpg" alt="">
+                            </div>
+                            <div class="info">
+                               <h2>Sarah Jhonson</h2> 
+                               <p>Product Manager</p>
+                               <br>
+                               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo, nihil!</p>
+                            </div>
+                        </div>
+                        <div class="team-pic-info-matter">
+                            <div class="pic">
+                                <img src="images/team-4.jpg" alt="">
+                            </div>
+                            <div class="info">
+                               <h2>William Anderson</h2> 
+                               <p>CTO</p>
+                               <br>
+                               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo, nihil!</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
 
-            <div class="division-item">
-                <img src="images/zs1115gn-lrg.jpg" alt="">
-            </div>
+            <!-- team-member-section end -->
 
-            <div class="division-item">
-                <img src="images/sp-1.png" alt="">
-            </div>
 
-            <div class="division-item">
-                <img src="images/mau-kpi-cho-vi-tri-nhan-vien-ke-toan-1.jpg" alt="">
-            </div>
-        </div>
+                <div class="division">
+
+                    <div class="division-item">
+                        <img src="images/classic Power tiller.jpg" alt="">
+                    </div>
+
+                    <div class="division-item">
+                        <img src="images/zs1115gn-lrg.jpg" alt="">
+                    </div>
+
+                    <div class="division-item">
+                        <img src="images/sp-1.png" alt="">
+                    </div>
+
+                    <div class="division-item">
+                        <img src="images/mau-kpi-cho-vi-tri-nhan-vien-ke-toan-1.jpg" alt="">
+                    </div>
+                </div>
+
+            
 
         <!-- main body end -->
 
