--- a/index.html
+++ b/index.html
@@ -498,6 +498,118 @@
             </div>
 
             <!-- team-member-section end -->
+
+            <!-- Price-section-start -->
+
+            <div class="section-seven">
+
+                <div class="price-box">
+
+                    <div class="price-title">
+                        <h2>PRICING</h2>
+                        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+                    </div>
+                    <div class="price-plan">
+                        <div class="price-plan-part">
+                            <h3>Free Plan</h3>
+                            <h4>$   <span>0</span> </h4>
+                            <h5>per month</h5>
+                            <br>
+                            <p><span>+</span> Quam adipiscing vitae proin</p>
+                            <p><span>+</span> Nec feugiat nisl pretium</p>
+                            <p><span>+</span> Nulla at volutpat diam uteera</p>
+                            <p><span>+</span> Pharetra massa massa ultricies</p>
+                            <p><span>+</span> Massa ultricies mi quis hendrerit</p>
+
+                            <button>Get Started</button>
+                        </div>
+
+                        <div class="price-plan-part">
+                            <h3>Free Plan</h3>
+                            <h4>$   <span>0</span> </h4>
+                            <h5>per month</h5>
+                            <br>
+                            <p><span>+</span> Quam adipiscing vitae proin</p>
+                            <p><span>+</span> Nec feugiat nisl pretium</p>
+                            <p><span>+</span> Nulla at volutpat diam uteera</p>
+                            <p><span>+</span> Pharetra massa massa ultricies</p>
+                            <p><span>+</span> Massa ultricies mi quis hendrerit</p>
+
+                            <button>Get Started</button>
+
+                        </div>
+
+                        <div class="price-plan-part">
+                            <h3>Free Plan</h3>
+                            <h4>$   <span>0</span> </h4>
+                            <h5>per month</h5>
+                            <br>
+                            <p><span>+</span> Quam adipiscing vitae proin</p>
+                            <p><span>+</span> Nec feugiat nisl pretium</p>
+                            <p><span>+</span> Nulla at volutpat diam uteera</p>
+                            <p><span>+</span> Pharetra massa massa ultricies</p>
+                            <p><span>+</span> Massa ultricies mi quis hendrerit</p>
+                            
+                            <button>Get Started</button>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
+
+            <!-- Price-section-end  -->
+
+            <!-- asked question-section start -->
+
+            <div class="section-eight">
+                <div class="Asked-ques-box">
+                    <div class="Asked-ques title">
+                        <h2>FREQUENTLY ASKED QUESTIONS</h2>
+                        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+                    </div>
+                    <div class="question-items">
+                        <h4><a href="#">Non consectetur a erat nam at lectus urna duis?</a></h4>
+                        <br>
+                        <p>Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.</p>
+                    </div>
+
+                    <div class="question-items">
+                        <h4><a href="#">Feugiat scelerisque varius morbi enim nunc?</a></h4>
+                        <br>
+                        <p>Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.</p>
+                    </div>
+
+                    <div class="question-items">
+                        <h4><a href="#">Dolor sit amet consectetur adipiscing elit?</a></h4>
+                        <br>
+                        <p>Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis convallis convallis tellus. Urna molestie at elementum eu facilisis sed odio morbi quis</p>
+                    </div>
+
+                    <div class="question-items">
+                        <h4><a href="#">Non consectetur a erat nam at lectus urna duis?</a></h4>
+                        <br>
+                        <p>Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.</p>
+                    </div>
+
+                    <div class="question-items">
+                        <h4><a href="#">Tortor vitae purus faucibus ornare. Varius vel pharetra vel turpis nunc eget lorem dolor?</a></h4>
+                        <br>
+                        <p>Laoreet sit amet cursus sit amet dictum sit amet justo. Mauris vitae ultricies leo integer malesuada nunc vel. Tincidunt eget nullam non nisi est sit amet. Turpis nunc eget lorem dolor sed. Ut venenatis tellus in metus vulputate eu scelerisque.</p>
+                    </div>
+
+
+                </div>
+            </div>
+
+
+
+            <!-- asked question-section end  -->
+
+
+            <!-- contact-section start  -->
+
+
             <div class="section-nine">
                 <div class="section-contact-row-1">
                     <div class="section-contact-title">
@@ -535,16 +647,38 @@
                                 </div>
                             </div>
 
+                            <div class="subject">
                                 <label for="Subject">Subject</label>
                                 <input type="text" name="Subject" id="Subject">
+                            </div>
 
+                            <div class="message">
                                 <label for="message">Message</label>
                                 <textarea name="message" id="message" cols="30" rows="10"></textarea>
+                            </div>
 
                                 <input type="button" value="Send Message" id="Send_message">
                         </form>
                     </div>
                 </div>
+            </div>
+
+            <!-- contact-section end -->
+
+            <div class="section-ten">
+
+                <div class="join-our-newsletter-box">
+                        <div class="newsletter-title">
+                            <h2>Join Our Newsletter</h2>
+                            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+                        </div>
+                        <div class="subscribe-bar">
+                            <button> <a href="#">Subscribe</a></button>
+                        </div>
+                </div>
+
+
+
             </div>
 
                 
